{
    "name": "CharacterInput",
    "maps": [
        {
            "name": "MovementStateMap",
            "id": "25b7d76e-7857-469b-8f3d-88ec980bf4b3",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "a81f28e8-ba3d-49b4-8457-ef15103cc8e1",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "26d1b1b9-dda2-42ca-8017-a3d98b1ce804",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0ed61019-d770-4eca-b810-13816286342c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD Keyboard",
                    "id": "6a93ccb8-9fa0-47df-bbfd-4615b9c01290",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d23a8a10-c259-4e2b-8c0a-7003f22b8b13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "32add35c-f376-4b77-8203-a21a3cad6d17",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0b37c9bc-b0f5-4922-98ef-065f6002fcec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a1c47518-6c27-4882-93c0-9d196594533d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dfbd5cf4-6e36-4b80-a6bb-299cd039183d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "687d8d23-f4fd-48cb-83b2-58b5315814ae",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "FightStateMap",
            "id": "e00f80fe-1817-4919-9c6a-5555127f162d",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "c265746e-1787-4f06-b15a-c39a926150de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7ae36d6-a0f8-4d07-8e53-f8f8e0d9e969",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ParkourStateMap",
            "id": "4c0f6db1-3b2c-4fd5-b62e-9bd1f76e21c7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6e3e8c00-d892-402a-9a70-b3c08109baad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ea2a7c27-4859-4835-8e0a-40a8c9b77d44",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}